--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinecollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="b9729-101">表示图表趋势线的集合。</span><span class="sxs-lookup"><span data-stu-id="b9729-101">Represents a collection of Chart Trendlines.</span></span>
+      表示图表趋势线的集合。
 
-      <span data-ttu-id="b9729-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
     fullName: Excel.Interfaces.ChartTrendlineCollectionLoadOptions
     langs:
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#showRSquared:member'
       - 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#type:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="b9729-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="b9729-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="b9729-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="b9729-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="b9729-105">).</span><span class="sxs-lookup"><span data-stu-id="b9729-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -38,9 +38,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#backwardPeriod:member'
     summary: |-
-      <span data-ttu-id="b9729-106">对于集合中的每一项：表示趋势线向后延伸的周期数。</span><span class="sxs-lookup"><span data-stu-id="b9729-106">For EACH ITEM in the collection: Represents the number of periods that the trendline extends backward.</span></span>
+      对于集合中的每一项：表示趋势线向后延伸的周期数。
 
-      <span data-ttu-id="b9729-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: backwardPeriod
     fullName: backwardPeriod
     langs:
@@ -53,9 +53,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="b9729-108">对于集合中的每一项：代表图表趋势线的格式。</span><span class="sxs-lookup"><span data-stu-id="b9729-108">For EACH ITEM in the collection: Represents the formatting of a chart trendline.</span></span>
+      对于集合中的每一项：代表图表趋势线的格式。
 
-      <span data-ttu-id="b9729-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#forwardPeriod:member'
     summary: |-
-      <span data-ttu-id="b9729-110">对于集合中的每一项：表示趋势线向前延伸的周期数。</span><span class="sxs-lookup"><span data-stu-id="b9729-110">For EACH ITEM in the collection: Represents the number of periods that the trendline extends forward.</span></span>
+      对于集合中的每一项：表示趋势线向前延伸的周期数。
 
-      <span data-ttu-id="b9729-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: forwardPeriod
     fullName: forwardPeriod
     langs:
@@ -83,9 +83,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#intercept:member'
     summary: |-
-      <span data-ttu-id="b9729-112">对于集合中的每一项：代表趋势线的截距值。</span><span class="sxs-lookup"><span data-stu-id="b9729-112">For EACH ITEM in the collection: Represents the intercept value of the trendline.</span></span> <span data-ttu-id="b9729-113">可以设置为数字值或空字符串（对于自动值）。</span><span class="sxs-lookup"><span data-stu-id="b9729-113">Can be set to a numeric value or an empty string (for automatic values).</span></span> <span data-ttu-id="b9729-114">返回的值始终为数字。</span><span class="sxs-lookup"><span data-stu-id="b9729-114">The returned value is always a number.</span></span>
+      对于集合中的每一项：代表趋势线的截距值。 可以设置为数字值或空字符串（对于自动值）。 返回的值始终为数字。
 
-      <span data-ttu-id="b9729-115">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-115">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: intercept
     fullName: intercept
     langs:
@@ -98,9 +98,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#label:member'
     summary: |-
-      <span data-ttu-id="b9729-116">对于集合中的每一项：代表图表趋势线的标签。</span><span class="sxs-lookup"><span data-stu-id="b9729-116">For EACH ITEM in the collection: Represents the label of a chart trendline.</span></span>
+      对于集合中的每一项：代表图表趋势线的标签。
 
-      <span data-ttu-id="b9729-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: label
     fullName: label
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineLabelLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#movingAveragePeriod:member'
     summary: |-
-      <span data-ttu-id="b9729-118">对于集合中的每一项：代表图表趋势线的周期。</span><span class="sxs-lookup"><span data-stu-id="b9729-118">For EACH ITEM in the collection: Represents the period of a chart trendline.</span></span> <span data-ttu-id="b9729-119">仅适用于 MovingAverage 类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="b9729-119">Only applicable for trendline with MovingAverage type.</span></span>
+      对于集合中的每一项：代表图表趋势线的周期。 仅适用于 MovingAverage 类型的趋势线。
 
-      <span data-ttu-id="b9729-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: movingAveragePeriod
     fullName: movingAveragePeriod
     langs:
@@ -128,9 +128,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="b9729-121">对于集合中的每一项：代表趋势线的名称。</span><span class="sxs-lookup"><span data-stu-id="b9729-121">For EACH ITEM in the collection: Represents the name of the trendline.</span></span> <span data-ttu-id="b9729-122">可设为字符串值，或者设为 Null 值（表示自动值）。</span><span class="sxs-lookup"><span data-stu-id="b9729-122">Can be set to a string value, or can be set to null value represents automatic values.</span></span> <span data-ttu-id="b9729-123">返回的值始终为字符串</span><span class="sxs-lookup"><span data-stu-id="b9729-123">The returned value is always a string</span></span>
+      对于集合中的每一项：代表趋势线的名称。 可设为字符串值，或者设为 Null 值（表示自动值）。 返回的值始终为字符串
 
-      <span data-ttu-id="b9729-124">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-124">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -143,9 +143,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#polynomialOrder:member'
     summary: |-
-      <span data-ttu-id="b9729-125">对于集合中的每一项：表示图表趋势线的顺序。</span><span class="sxs-lookup"><span data-stu-id="b9729-125">For EACH ITEM in the collection: Represents the order of a chart trendline.</span></span> <span data-ttu-id="b9729-126">仅适用于具有多项式类型的趋势线。</span><span class="sxs-lookup"><span data-stu-id="b9729-126">Only applicable for trendline with Polynomial type.</span></span>
+      对于集合中的每一项：表示图表趋势线的顺序。 仅适用于具有多项式类型的趋势线。
 
-      <span data-ttu-id="b9729-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: polynomialOrder
     fullName: polynomialOrder
     langs:
@@ -158,9 +158,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#showEquation:member'
     summary: |-
-      <span data-ttu-id="b9729-128">对于集合中的每个项目：如果图表上显示趋势线的公式，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b9729-128">For EACH ITEM in the collection: True if the equation for the trendline is displayed on the chart.</span></span>
+      对于集合中的每个项目：如果图表上显示趋势线的公式，则为 True。
 
-      <span data-ttu-id="b9729-129">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-129">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showEquation
     fullName: showEquation
     langs:
@@ -173,9 +173,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#showRSquared:member'
     summary: |-
-      <span data-ttu-id="b9729-130">对于集合中的每一项：如果趋势线的 R 平方值显示在图表上，则为 True。</span><span class="sxs-lookup"><span data-stu-id="b9729-130">For EACH ITEM in the collection: True if the R-squared for the trendline is displayed on the chart.</span></span>
+      对于集合中的每一项：如果趋势线的 R 平方值显示在图表上，则为 True。
 
-      <span data-ttu-id="b9729-131">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-131">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showRSquared
     fullName: showRSquared
     langs:
@@ -188,9 +188,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineCollectionLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="b9729-132">对于集合中的每一项：代表图表趋势线的类型。</span><span class="sxs-lookup"><span data-stu-id="b9729-132">For EACH ITEM in the collection: Represents the type of a chart trendline.</span></span>
+      对于集合中的每一项：代表图表趋势线的类型。
 
-      <span data-ttu-id="b9729-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b9729-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
