--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalformatruleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalformatruleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData:interface'
-    summary: '<span data-ttu-id="462c3-101">一个用于更新 ConditionalFormatRule 对象上的数据的接口，可用于`conditionalFormatRule.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="462c3-101">An interface for updating data on the ConditionalFormatRule object, for use in `conditionalFormatRule.set({ ... })`</span></span><!-- --><span data-ttu-id="462c3-102">.</span><span class="sxs-lookup"><span data-stu-id="462c3-102"></span></span>'
+    summary: '一个用于更新 ConditionalFormatRule 对象上的数据的接口，可用于`conditionalFormatRule.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ConditionalFormatRuleUpdateData
     fullName: Excel.Interfaces.ConditionalFormatRuleUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaR1C1:member'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formula:member'
     summary: |-
-      <span data-ttu-id="462c3-103">如果需要，公式可对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="462c3-103">The formula, if required, to evaluate the conditional format rule on.</span></span>
+      如果需要，公式可对条件格式规则进行求值。
 
-      <span data-ttu-id="462c3-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="462c3-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -29,9 +29,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaLocal:member'
     summary: |-
-      <span data-ttu-id="462c3-105">如果需要，公式可采用用户的语言对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="462c3-105">The formula, if required, to evaluate the conditional format rule on in the user's language.</span></span>
+      如果需要，公式可采用用户的语言对条件格式规则进行求值。
 
-      <span data-ttu-id="462c3-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="462c3-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaLocal
     fullName: formulaLocal
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleUpdateData#formulaR1C1:member'
     summary: |-
-      <span data-ttu-id="462c3-107">如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。</span><span class="sxs-lookup"><span data-stu-id="462c3-107">The formula, if required, to evaluate the conditional format rule on in R1C1-style notation.</span></span>
+      如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。
 
-      <span data-ttu-id="462c3-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="462c3-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaR1C1
     fullName: formulaR1C1
     langs:
