--- a/docs/docs-ref-autogen/excel/excel/excel.clearapplyto.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.clearapplyto.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.ClearApplyTo:enum'
-    summary: '\[[API 集： ExcelApi 1.1 用于所有/格式/内容，1.7 用于超&amp;链接 HyperlinksAndFormats。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]'
+    summary: '\[[API 集： ExcelApi 1.1 的所有/格式/内容、1.7 的超链接 &amp;HyperlinksAndFormats。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]'
     name: Excel.ClearApplyTo
     fullName: Excel.ClearApplyTo
     langs:
